--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=blogapp
 
 spring.datasource.url=jdbc:mysql://localhost:3306/myblog1?useSSL=false&serverTimezone=UTC
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 
 spring.datasource.username = root
@@ -11,3 +12,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 # Hibernate ddl auto
 spring.jpa.hibernate.ddl-auto = update
+
+
