--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,23 @@
-spring.application.name=blogapp
+# spring.application.name=blogapp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/myblog1?useSSL=false&serverTimezone=UTC
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+# spring.datasource.url=jdbc:mysql://localhost:3306/myblog1?useSSL=false&serverTimezone=UTC
+# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 
-spring.datasource.username = root
-spring.datasource.password = root
+# spring.datasource.username = root
+# spring.datasource.password = root
 
 # hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto
-spring.jpa.hibernate.ddl-auto = update
+# spring.jpa.hibernate.ddl-auto = update
+
+#JWT properties
+app.jwt-secret= JWTSecretKey
+app.jwt-expiration-milliseconds = 604800000
+
+# spring profile activating
+spring.profiles.active =prod
 
 
